--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 				"type": "operation",
 				"name": "stable-diffusion-operation",
 				"source": {
-					"app": "src/stable-diffusion-operation/app.ts",
-					"api": "src/stable-diffusion-operation/api.ts"
+					"app": "src/stable-diffusion-operation/app.js",
+					"api": "src/stable-diffusion-operation/api.js"
 				}
 			},
 			{
@@ -52,8 +52,6 @@
 	},
 	"devDependencies": {
 		"@directus/extensions-sdk": "9.21.2",
-		"@types/node": "^18.11.17",
-		"typescript": "^4.9.4",
 		"vue": "^3.2.45"
 	},
 	"dependencies": {
