Initial start on docs

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"keywords": [
 		"directus",
 		"directus-extension",
+		"directus-operation",
 		"directus-custom-bundle"
 	],
 	"directus:extension": {
