--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "directus-extension-ai-operation-bundle",
-	"version": "1.0.1",
+	"version": "1.0.2",
+	"author": "brainslug",
 	"keywords": [
 		"directus",
 		"directus-extension",
@@ -58,5 +59,10 @@
 	"dependencies": {
 		"node-fetch": "^3.3.0",
 		"openai": "^3.1.0"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/br41nslug/directus-extension-ai-pack.git"
+	},
+	"license": "MIT"
 }
